--- a/style.css
+++ b/style.css
@@ -456,8 +456,8 @@ object-fit: cover;
 #map{
   width: 100%;
   height: 400px;
-  margin-right: 2%;
-  /* margin-left: 2%; */
+  /* margin-right: 3%; */
+  /* margin-left: 3%; */
 }
 
 .mapouter {
